<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#dcdcdc">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 传入的自定义视图 -->

        <LinearLayout
            android:id="@+id/ll_dialog_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/dialog_tv_title"
                android:text="@string/title_hint" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@drawable/icon_split_horizontal" />

            <TextView
                style="@style/dialog_tv_content"
                android:text="@string/msg_check_wifi" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/icon_split_horizontal" />

        <!-- 取消,确定按钮 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/dialog_cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@drawable/icon_split_vertical" />

            <TextView
                android:id="@+id/tv_open_wifi"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/title_wifi_list" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@drawable/icon_split_vertical" />

            <TextView
                android:id="@+id/tv_ap"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/title_ap" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>