<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#dcdcdc">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_tv_title"
            style="@style/dialog_tv_title"
            android:text="@string/title_hint" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/icon_split_horizontal" />
        <!-- 传入的自定义视图 -->

        <TextView
            android:id="@+id/dialog_content"
            style="@style/dialog_tv_title"
            android:text="@string/title_open_wifi" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/icon_split_horizontal" />

        <!-- 取消,确定按钮 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/txt_cancel"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/dialog_cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@drawable/icon_split_vertical" />

            <TextView
                android:id="@+id/txt_confirm"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/dialog_confirm" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>