<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:orientation="vertical"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background" />

        <LinearLayout
            android:id="@+id/ll_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="45dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_logo" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="45dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="phone"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:digits="@string/regularization_password"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/bg_btn_login"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="17sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_forgetpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/gray"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="2dp"
                    android:text="@string/register"
                    android:textColor="@color/gray"
                    android:textSize="15dp" />


            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
