<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#dcdcdc" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 传入的自定义视图 -->

        <LinearLayout
            android:id="@+id/ll_dialog_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="#959595" />

        <RelativeLayout
            android:id="@+id/rl_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="10dip"
            android:clickable="true">

            <ImageView
                android:id="@+id/img_show_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_check_def" />

            <TextView
                android:id="@+id/txt_cta_name"
                style="@style/dialog_row_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_show_pwd"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_show_password"
                android:layout_toEndOf="@+id/img_show_password" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/icon_split_horizontal" />

        <!-- 取消,确定按钮 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/txt_cancel"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/dialog_cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@drawable/icon_split_vertical" />

            <TextView
                android:id="@+id/txt_confirm"
                style="@style/dialog_btn"
                android:background="@drawable/button_dialog"
                android:text="@string/dialog_confirm" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>