<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plug_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <include layout="@layout/title_pager" />

    <LinearLayout
        android:id="@+id/ll_basic_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/idle_time"
                android:textColor="@color/grays"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="30S"
                android:textColor="@color/grays"
                android:textSize="13sp" />

        </LinearLayout>

        <!--<View-->
        <!--android:layout_width="0.5dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@color/div_l" />-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/brightness"
                android:textColor="@color/grays"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="80%"
                android:textColor="@color/grays"
                android:textSize="13sp" />

        </LinearLayout>

        <!--<View-->
        <!--android:layout_width="0.5dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@color/div_color" />-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/volume"
                android:textColor="@color/grays"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="50%"
                android:textColor="@color/grays"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/connect_plug"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingRight="10dp"
            android:src="@drawable/batteryphoto" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="230dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/c200_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="小郭的眼镜"
        android:textColor="@color/lightWhite"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/voice"
        android:drawablePadding="10dp"
        android:text="@string/voice_notice"
        android:textColor="@color/main_color"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/im_voice_martin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/voice_photo" />

                <TextView
                    android:id="@+id/tv_welcom_normal_commands4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/im_voice_martin"
                    android:text="@string/home_show_martin"
                    android:textColor="@color/lightWhite" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/im_voice_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/voice_photo" />

                <TextView
                    android:id="@+id/tv_welcom_normal_commands5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/im_voice_camera"
                    android:text="@string/home_show_camera"
                    android:textColor="@color/lightWhite" />

            </RelativeLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wave_line" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <GridView
        android:id="@+id/gv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="2"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp" />

</LinearLayout>
